logs/py-resolv.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_resolv-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pyresolv'...
Compiling './lib/python3.5/site-packages/pyresolv/basedns.py'...
***   File "./lib/python3.5/site-packages/pyresolv/basedns.py", line 194
    except Exception , e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyresolv/dns.py'...
***   File "./lib/python3.5/site-packages/pyresolv/dns.py", line 44
    except Exception , e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyresolv/dnsreqres.py'...
***   File "./lib/python3.5/site-packages/pyresolv/dnsreqres.py", line 399
    print res
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/pyresolv'...
Compiling './share/pyresolv/async_ex.py'...
Compiling './share/pyresolv/sync_ex.py'...
Listing './share/python-wheels'...
